# softworker

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
web/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx
web/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
web/src/components/feedback/: status-alert.tsx
web/src/components/preview/: preview-frame.tsx  preview-panel.tsx
web/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx  textarea.tsx
web/src/components/workspace/: header.tsx  mode-switch.tsx  source-editor.tsx
web/src/constants/: workspace.ts
web/src/hooks/preview/: use-preview-downloads.ts  use-preview-frame.ts
web/src/hooks/workspace/: use-workspace-header.ts  use-workspace-mode-switch.ts  use-workspace-persistence.ts
web/src/lib/: rate-limit.ts  trpc.ts
web/src/mappers/: resume.mapper.ts
web/src/mappers/resume/: path.mapper.ts  resume.mapper.ts
web/src/mappers/workspace/: status-alert.mapper.ts
web/src/schemas/: pdf.schema.ts  resume-field.schema.ts  resume.schema.ts
web/src/server/actions/: pdf.ts
web/src/server/services/: pdf.service.ts  preview.service.ts
web/src/server/trpc/: context.ts  trpc.ts
web/src/services/: resume-form.service.ts  resume-i18n.service.ts  resume.service.ts  ui-i18n.service.ts  workspace.service.ts
web/src/stores/: resume.store.ts  workspace.store.ts
web/src/styles/: globals.css
web/src/types/ui/: locale-code.ts  resume-language.ts  (+1 more)
web/src/utils/: download.ts  json.ts
(+43 files in other folders)
