[project]
name = "softworker"
version = "1.0.1"
description = "Biblioteca Python para gerar currículos ATS-friendly em PDF a partir de dados estruturados em JSON."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "nayetdet", email = "jpmoreiracampos21@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jsonata-python>=0.6.2",
    "pybars3>=0.9.7",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "typer>=0.25.1",
    "weasyprint>=68.1",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/softworker/template" = [
    "template/*.hbs",
    "template/*.css",
    "template/*.json",
    "template/*.jsonata",
]
"share/softworker/template/partials" = [
    "template/partials/*.hbs",
]
"share/softworker/template/views" = [
    "template/views/*.hbs",
]
